# INF2475-DeepLearning

./: .gitignore  INF2475-Deep_Learning.md  README.md  analysis.py  main.py  pyproject.toml  roc_analysis.py  test_dsine.py  test_fusion.py  test_wavelet.py
src/: dsine_infer.py  fusion.py  wavelet_energy.py
