[project]
name = "geo-tex-poc"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "geffnet>=1.0.2",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.3.0",
    "pywavelets>=1.9.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]
